<?xml version="1.0" encoding="utf-8"?>



    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"

        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_splash_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_user"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
           app:layout_constraintTop_toBottomOf="@id/btn_back"
            />
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_back"
            android:padding="@dimen/_3sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_margin="@dimen/_8sdp"
            />


        <EditText
            android:id="@+id/edit_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_green_user"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            />

        <EditText
            android:id="@+id/edit_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_green_user"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/last_name"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_fname"
            />


        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_lname"
            />



        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone"
            />



        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_email"
            />
        <EditText
            android:id="@+id/edit_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password_confirm"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_password"
            />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"


        android:backgroundTint="@color/main_color"
        android:text="@string/create_user"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_password_confirm"
        app:layout_constraintWidth_percent="0.90" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_create" />



    </androidx.constraintlayout.widget.ConstraintLayout>

