<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_splash_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_user"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back" />
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_back"
            android:padding="@dimen/_3sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/_8sdp"
            />


        <EditText
            android:id="@+id/edit_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_green_user"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/btn_back"
            />

        <EditText
            android:id="@+id/edit_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_green_user"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/last_name"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_fname"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/main_color"
            app:boxStrokeColor="@color/main_color"
            app:endIconTint="@color/arrow"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/gender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@+id/edit_lname"

            >
            <AutoCompleteTextView
                android:id="@+id/dropdown_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_green_gender"
                android:drawablePadding="@dimen/_7sdp"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:id="@+id/edit_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawablePadding="@dimen/_10sdp"
            android:text="@string/birthday"
            android:textColor="@color/black"
            android:maxLines="1"
            android:clickable="false"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_gender"
            app:drawableEndCompat="@drawable/ic_arrow_down"
            app:drawableStartCompat="@drawable/ic_green_date" />




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/main_color"
            app:boxStrokeColor="@color/main_color"
            app:endIconTint="@color/arrow"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/blood"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@+id/edit_birthday"

            >
            <AutoCompleteTextView
                android:id="@+id/dropdown_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_33sdp"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.10"
            app:layout_constraintHeight_percent="0.025"
            app:layout_constraintTop_toTopOf="@+id/spinner_type"
            app:layout_constraintStart_toStartOf="@+id/spinner_type"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_type"
            android:src="@drawable/blood"
            />

        <EditText
            android:id="@+id/edit_nationalID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_30sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:hint="@string/nationalIdNumber"
            android:textColor="@color/black"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/spinner_type"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.10"
            app:layout_constraintHeight_percent="0.025"
            app:layout_constraintTop_toTopOf="@+id/edit_nationalID"
            app:layout_constraintStart_toStartOf="@+id/edit_nationalID"
            app:layout_constraintBottom_toBottomOf="@+id/edit_nationalID"
            android:src="@drawable/identity"
            />



        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_nationalID"
            />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_green_address"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/address"
            android:textColor="@color/black"
            android:inputType="text"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_phone"
            />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_address"
            />



        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_email"
            />
        <EditText
            android:id="@+id/edit_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:background="@drawable/edit_shape_trans"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password_confirm"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/edit_password"
            />


<com.google.android.material.button.MaterialButton
            android:id="@+id/fawry"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/main_color"
            android:textSize="20sp"
            android:text="Confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintHeight_percent="0.082"
            app:layout_constraintWidth_percent="0.90"
            app:layout_constraintTop_toBottomOf="@+id/edit_password_confirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:lottie_rawRes="@raw/progress"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:elevation="20dp"
            app:layout_constraintStart_toStartOf="@+id/fawry"
            app:layout_constraintTop_toTopOf="@+id/fawry"
            app:layout_constraintEnd_toEndOf="@+id/fawry"
            app:layout_constraintBottom_toBottomOf="@+id/fawry"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>